# jasso

./: .gitignore  CHANGELOG.md  Makefile  README  jasso.cabal
debian/: .gitignore  changelog  control  copyright  jasso.manpages  jasso.md  jasso.service  postinst  postrm  rules
doc/conf/: jasso.conf  rp.conf  sp.conf
frontend/: .gitignore  Logo.elm  Makefile  UI.elm  elm.json
src/: Certs.hs  Config.hs  ConfigTypes.hs  JassoState.hs  Ldap.hs  LogTypes.hs  Logger.hs  Main.hs  MkElmApi.hs  Oidc.hs  OidcTypes.hs  Otp.hs  Saml.hs  Session.hs  SinkCommon.hs  StdoutLogger.hs  UI.hs  UICommon.hs  UIIncludes.cpphs  UITypes.hs
