cabal-version:      3.4

-- Jasso is Copyright (c) 2021-2024 Homebrew Holdings Pty Ltd.
-- Contributors retain the copyright for their contributions.
--
-- This program is free software: you can redistribute it and/or modify it under
-- the terms of the GNU Affero General Public License as published by the Free
-- Software Foundation, either version 3 of the License, or (at your option) any
-- later version.
--
-- This program is distributed in the hope that it will be useful, but WITHOUT ANY
-- WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
-- PARTICULAR PURPOSE.  See the GNU Affero General Public License for more details.
--
-- You should have received a copy of the GNU Affero General Public License along
-- with this program.  If not, see <https://www.gnu.org/licenses/>.

name:               jasso
version:            0.2.0.1
synopsis:           Single sign-on system from Piglet Engineering
description:        Jasso is a modular system for identity management.  It currently supports:
           Source   Sink
  LDAP     yes      no
  SAML2    no       yes
  OIDC     no       yes
  SCIM     no       no
  Radius   no       no
  Postgres no       -
homepage:           https://dev.piglet.ch/jasso/jasso
license:            AGPL-3.0-or-later
license-file:       LICENSE
author:             Pete Ryland
maintainer:         pdr@piglet.ch
copyright:          2021-2024 (c) Homebrew Holdings Pty Ltd
category:           Network, Security, Web

build-type: Simple
extra-doc-files: CHANGELOG.md

source-repository head
  type: git
  location: ssh://dev.piglet.ch/jasso/jasso.git

flag jasso_dev
  description: Don't compile in bundled files
  default: False

flag use_crypton
  description: Use crypton library instead of cryptonite
  default: False

common common
  hs-source-dirs: src, frontend
  build-depends:
    base < 6,
    aeson,
    bytestring,
    elm-bridge,
    http-media,
    lucid,
    servant-elm,
    servant-multipart,
    servant-server,
    text
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wno-orphans
    -fPIC
    -optL=-pie
    -optL=-fpie
    -optc-pie
    -optc-fpie
    --with-rtsopts=-N
    -threaded
  if flag(jasso_dev)
    cpp-options:
      -DJASSO_DEV

executable jasso
  import: common
  main-is: Main.hs
  autogen-modules: Paths_jasso
  other-modules:
    JassoState
    Certs
    Config
    ConfigTypes
    Ldap
    LogTypes
    Logger
    Oidc
    OidcTypes
    Otp
    Paths_jasso
    Saml
    Session
    SinkCommon
    StdoutLogger
    UI
    UICommon
    UIIncludes
    UIJS
    UITypes
  build-depends:
    base32,
    base64-bytestring,
    binary,
    colour,
    containers,
    cookie,
    data-default,
    diagrams-core,
    diagrams-lib,
    diagrams-svg,
    directory,
    extra,
    filepath,
    http-types,
    hxt,
    include-file,
    ldap-client,
    lens,
    lucid-svg,
    memory,
    network-uri,
    pem,
    qrcode-core,
    random >=1.2,
    servant,
    servant-lucid,
    split,
    svg-builder,
    template-haskell,
    time,
    transformers,
    unix,
    unordered-containers,
    utf8-string,
    uuid-types,
    vector,
    wai,
    wai-cors,
    yaml,
    zlib,
  if flag(use_crypton)
    build-depends:
      crypton,
      crypton-x509,
      crypton-x509-store,
      hsaml2 > 0.1.2,
      jose >= 0.11,
      warp >= 3.3.26,
  else
    build-depends:
      cryptonite,
      hsaml2 <= 0.1.2,
      jose < 0.11,
      warp < 3.3.26,
      x509,
      x509-store,

executable mkelmapi
  import: common
  main-is: MkElmApi.hs
  other-modules: UITypes
  build-depends: servant-elm
